--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Consum</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <!-- Incloem Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Incloem jsPDF -->
@@ -99,7 +99,6 @@
                     <button onclick="exportToPDF('oficina')" style="margin-top: 10px;">Exportar a PDF</button>
                 </div>
             </div>
-            <button onclick="calcularDadesPropies()">Calcular i Mostrar Gràfics</button>
         </div>
 
         <!-- Contingut Pestanya Consum Elèctric -->
@@ -162,6 +161,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
