--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Calculadora de Consum</h1>
+        <h1 style=" text-align: center;">Calculadora de Consum</h1>
 
         <!-- Pestanyes -->
         <div class="tabs">
